<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.example.arenillo_exer4_slambook.MyForm"
            />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="568dp"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/thankyou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thankyou"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/done_nickname" />

            <TextView
                android:id="@+id/done_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donename"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/done_nickname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.561" />

            <TextView
                android:id="@+id/done_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:text="@string/donenickname"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/done_age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/done_name" />

            <TextView
                android:id="@+id/done_age"
                android:layout_width="38dp"
                android:layout_height="21dp"
                android:text="@string/doneage"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/thankyou"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/done_nickname"
                app:layout_constraintVertical_bias="0.484" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="67dp"
            android:layout_height="46dp"
            android:text="Hello!"
            android:textSize="24sp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="28dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="72dp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/editname" />

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nickname"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="115dp" />

                <EditText
                    android:id="@+id/editNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/EditNickname" />

                <TextView
                    android:id="@+id/Age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Age"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="147dp" />

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/EditAge" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Birthday"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="184dp" />

                <EditText
                    android:id="@+id/editBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/EditBIrthday" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Number"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="234dp" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/editPhone" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="277dp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="328dp" />

                <EditText
                    android:id="@+id/editCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/dream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dream"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="378dp" />

                <EditText
                    android:id="@+id/editDream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/crush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crush"
                    tools:layout_editor_absoluteX="23dp"
                    tools:layout_editor_absoluteY="441dp" />

                <EditText
                    android:id="@+id/editCrush"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    tools:layout_editor_absoluteX="23dp"
                    tools:layout_editor_absoluteY="492dp" />

                <EditText
                    android:id="@+id/editMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/done" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    </layout>